# proyecto-taller-1

./: .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  deploy-full.yml  deploy-marketing.yml
ai-service/: .env.example  .gitignore  README.md  pyproject.toml
ai-service/app/: config.py  main.py
ai-service/app/api/: grading.py  health.py  models_registry.py  problems.py
ai-service/app/core/: lmstudio_client.py
ai-service/app/core/parsers/: grade_parser.py  problem_parser.py
ai-service/app/core/prompts/: problem_generator.py  solution_grader.py
ai-service/app/schemas/: grade.py
ai-service/app/storage/: json_store.py
backend/: .Dockerfile  .env.example  Dockerfile  README.md  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.spec.json  tsconfig.tsbuildinfo
backend/src/: app.module.ts  main.ts
backend/src/database/: data-source.ts  database.module.ts
backend/test/: tsconfig.json
backend/test/core/: response-format.e2e-spec.ts
backend/test/setup/: auth.helper.ts  test-app.factory.ts
frontend/: .dockerignore  Dockerfile  README.md  angular.json  jest.config.js  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.spec.json  vercel.json
frontend/src/: app.component.ts  app.config.ts  app.routes.ts  index.html  main.ts
marketing/: .dockerignore  .gitignore  Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml
marketing/docker/: nginx.conf
nginx/: nginx.conf
(+301 files in other folders)
